<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_gujarati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gujarati"
        android:layout_marginTop="8dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>